--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "plupload": "~2.1.2",
-    "underscore": "~1.7.0"
+    "underscore": "~1.7.0",
+    "phpviddler": "git@github.com:viddler/phpviddler.git#~4.0.1"
   }
 }
