Move location of bower packages

--- a/bower.json
+++ b/bower.json
@@ -1,4 +1,5 @@
 {
+  "directory": "src/lib",
   "name": "viddler-uploader",
   "version": "0.0.0",
   "authors": [
@@ -17,6 +18,6 @@
   "dependencies": {
     "plupload": "~2.1.2",
     "underscore": "~1.7.0",
-    "phpviddler": "git@github.com:viddler/phpviddler.git#~4.0.1",
+    "phpviddler": "git@github.com:viddler/phpviddler.git#~4.0.1"
   }
 }
